# evalops-lab

./: Makefile  README.md  evalops.example.yaml  golden.jsonl  pyproject.toml  run_api.sh  tasks.jsonl  test_engine_smoke.py  test_metrics.py
evalops-lab/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INSTRUCTIONS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
evalops-lab/docs/: adding_tasks.md  ci_cd.md  evalops_principles.md  metrics.md
evalops-lab/evals/baselines/: default.baseline.json
evalops-lab/evals/datasets/: smoke.jsonl
evalops-lab/evals/suites/: default.yaml
evalops-lab/src/evalops_lab/: cli.py
evalops-lab/src/evalops_lab/core/: baseline.py  gates.py  io.py  metrics.py  report.py  runner.py
evalops-lab/src/evalops_lab/evals/: harness.py
evalops-lab/src/evalops_lab/providers/: base.py  mock.py  registry.py
evalops-lab/tests/: test_metrics.py  test_runner_smoke.py
